# ghc-9.4-bug

./: README.md  build.sh  ghc-bug.cabal  shell.nix
src/: Foo.hs  ModuleAB.hs  ModuleC.hs  MyModule.hs
